argocd-gtw/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  parentRefs:
    # - name: argocd-gtw
    #   sectionName: http
    #   kind: Gateway
    - name: argocd-gtw
      sectionName: https
      kind: Gateway
  hostnames:
    - argocd.ashwingowda.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
